[package]
name = "rocket_port"
version = "0.1.0"
authors = ["Daniel Voigt <yidaotus@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { path= "Rocket/core/lib" }
jwt = "0.13.0"
hmac = "0.10.1"
sha2 = "0.9.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["async-std-runtime"]

[dependencies.rocket_contrib]
path = "Rocket/contrib/lib" 
version = "0.5.0-dev"
default-features = false
features = ["json"]

